k8s/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: hrms

  labels:
    app: hrms
    environment: production
