k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hrms-frontend
  namespace: hrms

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hrms-frontend

  template:
    metadata:
      labels:
        app: hrms-frontend

    spec:
      containers:
      - name: hrms-frontend

        image: 930664225702.dkr.ecr.us-east-1.amazonaws.com/hrms-frontend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"
